--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^4.1.13"
+  },
+  "dependencies": {
+    "daisyui": "^5.1.10"
   }
 }
